--- a/Sandbox/Sandbox.vcxproj
+++ b/Sandbox/Sandbox.vcxproj
@@ -94,7 +94,8 @@
       <Command>if exist $(SolutionDir)bin\Debug\Sandbox\Shaders (rmdir /s /q $(SolutionDir)bin\Debug\Sandbox\Shaders)
 if exist $(SolutionDir)bin\Debug\Sandbox\Content (rmdir /s /q $(SolutionDir)bin\Debug\Sandbox\Content)
 echo Copying files...
-IF EXIST $(SolutionDir)$(ProjectName)\src\Shaders\Test\*.hlsl\ (xcopy /Q /E /Y /I $(SolutionDir)$(ProjectName)\src\Shaders\Test\*.hlsl ..\bin\Debug\Sandbox\Shaders &gt; nul) ELSE (xcopy /Q /Y /I $(SolutionDir)$(ProjectName)\src\Shaders\Test\*.hlsl ..\bin\Debug\Sandbox\Shaders &gt; nul)
+IF EXIST $(SolutionDir)$(ProjectName)\src\Shaders\*.hlsl\ (xcopy /Q /E /Y /I $(SolutionDir)$(ProjectName)\src\Shaders\*.hlsl ..\bin\Debug\Sandbox\Shaders &gt; nul) ELSE (xcopy /Q /Y /I $(SolutionDir)$(ProjectName)\src\Shaders\*.hlsl ..\bin\Debug\Sandbox\Shaders &gt; nul)
+IF EXIST $(SolutionDir)Waldem\src\Shaders\*.hlsl\ (xcopy /Q /E /Y /I $(SolutionDir)Waldem\src\Shaders\*.hlsl ..\bin\Debug\Sandbox\Shaders &gt; nul) ELSE (xcopy /Q /Y /I $(SolutionDir)Waldem\src\Shaders\*.hlsl ..\bin\Debug\Sandbox\Shaders &gt; nul)
 IF EXIST $(SolutionDir)Waldem\vendor\SDL\lib\SDL2.dll\ (xcopy /Q /E /Y /I $(SolutionDir)Waldem\vendor\SDL\lib\SDL2.dll ..\bin\Debug\Sandbox &gt; nul) ELSE (xcopy /Q /Y /I $(SolutionDir)Waldem\vendor\SDL\lib\SDL2.dll ..\bin\Debug\Sandbox &gt; nul)
 IF EXIST $(SolutionDir)Waldem\vendor\assimp\lib\assimp-vc142-mt.dll\ (xcopy /Q /E /Y /I $(SolutionDir)Waldem\vendor\assimp\lib\assimp-vc142-mt.dll ..\bin\Debug\Sandbox &gt; nul) ELSE (xcopy /Q /Y /I $(SolutionDir)Waldem\vendor\assimp\lib\assimp-vc142-mt.dll ..\bin\Debug\Sandbox &gt; nul)
 xcopy /Q /E /Y /I $(SolutionDir)$(ProjectName)\Content ..\bin\Debug\Sandbox\Content</Command>
@@ -124,7 +125,8 @@ xcopy /Q /E /Y /I $(SolutionDir)$(ProjectName)\Content ..\bin\Debug\Sandbox\Cont
       <Command>if exist $(SolutionDir)bin\Debug\Sandbox\Shaders (rmdir /s /q $(SolutionDir)bin\Debug\Sandbox\Shaders)
 if exist $(SolutionDir)bin\Debug\Sandbox\Content (rmdir /s /q $(SolutionDir)bin\Debug\Sandbox\Content)
 echo Copying files...
-IF EXIST $(SolutionDir)$(ProjectName)\src\Shaders\Test\*.hlsl\ (xcopy /Q /E /Y /I $(SolutionDir)$(ProjectName)\src\Shaders\Test\*.hlsl ..\bin\Release\Sandbox\Shaders &gt; nul) ELSE (xcopy /Q /Y /I $(SolutionDir)$(ProjectName)\src\Shaders\Test\*.hlsl ..\bin\Release\Sandbox\Shaders &gt; nul)
+IF EXIST $(SolutionDir)$(ProjectName)\src\Shaders\*.hlsl\ (xcopy /Q /E /Y /I $(SolutionDir)$(ProjectName)\src\Shaders\*.hlsl ..\bin\Release\Sandbox\Shaders &gt; nul) ELSE (xcopy /Q /Y /I $(SolutionDir)$(ProjectName)\src\Shaders\*.hlsl ..\bin\Release\Sandbox\Shaders &gt; nul)
+IF EXIST $(SolutionDir)Waldem\src\Shaders\*.hlsl\ (xcopy /Q /E /Y /I $(SolutionDir)Waldem\src\Shaders\*.hlsl ..\bin\Release\Sandbox\Shaders &gt; nul) ELSE (xcopy /Q /Y /I $(SolutionDir)Waldem\src\Shaders\*.hlsl ..\bin\Release\Sandbox\Shaders &gt; nul)
 IF EXIST $(SolutionDir)Waldem\vendor\SDL\lib\SDL2.dll\ (xcopy /Q /E /Y /I $(SolutionDir)Waldem\vendor\SDL\lib\SDL2.dll ..\bin\Release\Sandbox &gt; nul) ELSE (xcopy /Q /Y /I $(SolutionDir)Waldem\vendor\SDL\lib\SDL2.dll ..\bin\Release\Sandbox &gt; nul)
 IF EXIST $(SolutionDir)Waldem\vendor\assimp\lib\assimp-vc142-mt.dll\ (xcopy /Q /E /Y /I $(SolutionDir)Waldem\vendor\assimp\lib\assimp-vc142-mt.dll ..\bin\Release\Sandbox &gt; nul) ELSE (xcopy /Q /Y /I $(SolutionDir)Waldem\vendor\assimp\lib\assimp-vc142-mt.dll ..\bin\Release\Sandbox &gt; nul)
 xcopy /Q /E /Y /I $(SolutionDir)$(ProjectName)\Content ..\bin\Release\Sandbox\Content</Command>
@@ -154,7 +156,8 @@ xcopy /Q /E /Y /I $(SolutionDir)$(ProjectName)\Content ..\bin\Release\Sandbox\Co
       <Command>if exist $(SolutionDir)bin\Debug\Sandbox\Shaders (rmdir /s /q $(SolutionDir)bin\Debug\Sandbox\Shaders)
 if exist $(SolutionDir)bin\Debug\Sandbox\Content (rmdir /s /q $(SolutionDir)bin\Debug\Sandbox\Content)
 echo Copying files...
-IF EXIST $(SolutionDir)$(ProjectName)\src\Shaders\Test\*.hlsl\ (xcopy /Q /E /Y /I $(SolutionDir)$(ProjectName)\src\Shaders\Test\*.hlsl ..\bin\Dist\Sandbox\Shaders &gt; nul) ELSE (xcopy /Q /Y /I $(SolutionDir)$(ProjectName)\src\Shaders\Test\*.hlsl ..\bin\Dist\Sandbox\Shaders &gt; nul)
+IF EXIST $(SolutionDir)$(ProjectName)\src\Shaders\*.hlsl\ (xcopy /Q /E /Y /I $(SolutionDir)$(ProjectName)\src\Shaders\*.hlsl ..\bin\Dist\Sandbox\Shaders &gt; nul) ELSE (xcopy /Q /Y /I $(SolutionDir)$(ProjectName)\src\Shaders\*.hlsl ..\bin\Dist\Sandbox\Shaders &gt; nul)
+IF EXIST $(SolutionDir)Waldem\src\Shaders\*.hlsl\ (xcopy /Q /E /Y /I $(SolutionDir)Waldem\src\Shaders\*.hlsl ..\bin\Dist\Sandbox\Shaders &gt; nul) ELSE (xcopy /Q /Y /I $(SolutionDir)Waldem\src\Shaders\*.hlsl ..\bin\Dist\Sandbox\Shaders &gt; nul)
 IF EXIST $(SolutionDir)Waldem\vendor\SDL\lib\SDL2.dll\ (xcopy /Q /E /Y /I $(SolutionDir)Waldem\vendor\SDL\lib\SDL2.dll ..\bin\Dist\Sandbox &gt; nul) ELSE (xcopy /Q /Y /I $(SolutionDir)Waldem\vendor\SDL\lib\SDL2.dll ..\bin\Dist\Sandbox &gt; nul)
 IF EXIST $(SolutionDir)Waldem\vendor\assimp\lib\assimp-vc142-mt.dll\ (xcopy /Q /E /Y /I $(SolutionDir)Waldem\vendor\assimp\lib\assimp-vc142-mt.dll ..\bin\Dist\Sandbox &gt; nul) ELSE (xcopy /Q /Y /I $(SolutionDir)Waldem\vendor\assimp\lib\assimp-vc142-mt.dll ..\bin\Dist\Sandbox &gt; nul)
 xcopy /Q /E /Y /I $(SolutionDir)$(ProjectName)\Content ..\bin\Dist\Sandbox\Content</Command>
@@ -167,82 +170,6 @@ xcopy /Q /E /Y /I $(SolutionDir)$(ProjectName)\Content ..\bin\Dist\Sandbox\Conte
   <ItemGroup>
     <ClCompile Include="src\SandboxApp.cpp" />
     <ClCompile Include="src\Scenes\DefaultScene.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <FxCompile Include="src\Shaders\Test\Core.hlsl">
-      <ExcludedFromBuild>true</ExcludedFromBuild>
-      <ShaderModel>5.1</ShaderModel>
-    </FxCompile>
-    <FxCompile Include="src\Shaders\Test\DeferredRendering.comp.hlsl">
-      <ExcludedFromBuild>true</ExcludedFromBuild>
-      <ShaderModel>5.1</ShaderModel>
-    </FxCompile>
-    <FxCompile Include="src\Shaders\Test\ForwardRendering.ps.hlsl">
-      <ShaderType>Pixel</ShaderType>
-      <ShaderModel>5.1</ShaderModel>
-      <EntryPointName>main</EntryPointName>
-    </FxCompile>
-    <FxCompile Include="src\Shaders\Test\ForwardRendering.vs.hlsl">
-      <ShaderType>Vertex</ShaderType>
-      <ShaderModel>5.1</ShaderModel>
-      <EntryPointName>main</EntryPointName>
-    </FxCompile>
-    <FxCompile Include="src\Shaders\Test\GBuffer.ps.hlsl">
-      <ShaderType>Pixel</ShaderType>
-      <ShaderModel>5.1</ShaderModel>
-      <EntryPointName>main</EntryPointName>
-    </FxCompile>
-    <FxCompile Include="src\Shaders\Test\GBuffer.vs.hlsl">
-      <ShaderType>Vertex</ShaderType>
-      <ShaderModel>5.1</ShaderModel>
-      <EntryPointName>main</EntryPointName>
-    </FxCompile>
-    <FxCompile Include="src\Shaders\Test\Lighting.hlsl">
-      <ExcludedFromBuild>true</ExcludedFromBuild>
-      <ShaderModel>5.1</ShaderModel>
-    </FxCompile>
-    <FxCompile Include="src\Shaders\Test\Line.ps.hlsl">
-      <ShaderType>Pixel</ShaderType>
-      <ShaderModel>5.1</ShaderModel>
-      <EntryPointName>main</EntryPointName>
-    </FxCompile>
-    <FxCompile Include="src\Shaders\Test\Line.vs.hlsl">
-      <ShaderType>Vertex</ShaderType>
-      <ShaderModel>5.1</ShaderModel>
-      <EntryPointName>main</EntryPointName>
-    </FxCompile>
-    <FxCompile Include="src\Shaders\Test\PostProcess.comp.hlsl">
-      <ExcludedFromBuild>true</ExcludedFromBuild>
-      <ShaderModel>5.1</ShaderModel>
-    </FxCompile>
-    <FxCompile Include="src\Shaders\Test\QuadDraw.ps.hlsl">
-      <ShaderType>Pixel</ShaderType>
-      <ShaderModel>5.1</ShaderModel>
-      <EntryPointName>main</EntryPointName>
-    </FxCompile>
-    <FxCompile Include="src\Shaders\Test\QuadDraw.vs.hlsl">
-      <ShaderType>Vertex</ShaderType>
-      <ShaderModel>5.1</ShaderModel>
-      <EntryPointName>main</EntryPointName>
-    </FxCompile>
-    <FxCompile Include="src\Shaders\Test\Shadowmap.ps.hlsl">
-      <ShaderType>Pixel</ShaderType>
-      <ShaderModel>5.1</ShaderModel>
-      <EntryPointName>main</EntryPointName>
-    </FxCompile>
-    <FxCompile Include="src\Shaders\Test\Shadowmap.vs.hlsl">
-      <ShaderType>Vertex</ShaderType>
-      <ShaderModel>5.1</ShaderModel>
-      <EntryPointName>main</EntryPointName>
-    </FxCompile>
-    <FxCompile Include="src\Shaders\Test\Shadows.hlsl">
-      <ExcludedFromBuild>true</ExcludedFromBuild>
-      <ShaderModel>5.1</ShaderModel>
-    </FxCompile>
-    <FxCompile Include="src\Shaders\Test\Types.hlsl">
-      <ExcludedFromBuild>true</ExcludedFromBuild>
-      <ShaderModel>5.1</ShaderModel>
-    </FxCompile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Waldem\Waldem.vcxproj">
