--- a/Waldem/Waldem.vcxproj
+++ b/Waldem/Waldem.vcxproj
@@ -674,6 +674,22 @@
     <ClCompile Include="src\Platform\Graphics\DirectX\DX12Texture.cpp" />
     <ClCompile Include="src\Platform\OS\Windows\WindowsInput.cpp" />
     <ClCompile Include="src\Platform\OS\Windows\WindowsWindow.cpp" />
+    <ClCompile Include="src\Shaders\Core.hlsl" />
+    <ClCompile Include="src\Shaders\DeferredRendering.comp.hlsl" />
+    <ClCompile Include="src\Shaders\ForwardRendering.ps.hlsl" />
+    <ClCompile Include="src\Shaders\ForwardRendering.vs.hlsl" />
+    <ClCompile Include="src\Shaders\GBuffer.ps.hlsl" />
+    <ClCompile Include="src\Shaders\GBuffer.vs.hlsl" />
+    <ClCompile Include="src\Shaders\Lighting.hlsl" />
+    <ClCompile Include="src\Shaders\Line.ps.hlsl" />
+    <ClCompile Include="src\Shaders\Line.vs.hlsl" />
+    <ClCompile Include="src\Shaders\PostProcess.comp.hlsl" />
+    <ClCompile Include="src\Shaders\QuadDraw.ps.hlsl" />
+    <ClCompile Include="src\Shaders\QuadDraw.vs.hlsl" />
+    <ClCompile Include="src\Shaders\Shadowmap.ps.hlsl" />
+    <ClCompile Include="src\Shaders\Shadowmap.vs.hlsl" />
+    <ClCompile Include="src\Shaders\Shadows.hlsl" />
+    <ClCompile Include="src\Shaders\Types.hlsl" />
     <ClCompile Include="src\Waldem\Application.cpp" />
     <ClCompile Include="src\Waldem\Editor\Editor.cpp" />
     <ClCompile Include="src\Waldem\Import\ModelImporter.cpp" />
